nesc-frontend/src/test/resources/integration/programs/bad/bad17/I.nc
interface I<T>
{
   command void c();
}
